; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/usb/extr_usbnet.c_usbnet_unlink_rx_urbs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/usb/extr_usbnet.c_usbnet_unlink_rx_urbs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbnet = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usbnet_unlink_rx_urbs(%struct.usbnet* %0) #0 {
  %2 = alloca %struct.usbnet*, align 8
  store %struct.usbnet* %0, %struct.usbnet** %2, align 8
  %3 = load %struct.usbnet*, %struct.usbnet** %2, align 8
  %4 = getelementptr inbounds %struct.usbnet, %struct.usbnet* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i64 @netif_running(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %16

8:                                                ; preds = %1
  %9 = load %struct.usbnet*, %struct.usbnet** %2, align 8
  %10 = load %struct.usbnet*, %struct.usbnet** %2, align 8
  %11 = getelementptr inbounds %struct.usbnet, %struct.usbnet* %10, i32 0, i32 1
  %12 = call i32 @unlink_urbs(%struct.usbnet* %9, i32* %11)
  %13 = load %struct.usbnet*, %struct.usbnet** %2, align 8
  %14 = getelementptr inbounds %struct.usbnet, %struct.usbnet* %13, i32 0, i32 0
  %15 = call i32 @tasklet_schedule(i32* %14)
  br label %16

16:                                               ; preds = %8, %1
  ret void
}

declare dso_local i64 @netif_running(i32) #1

declare dso_local i32 @unlink_urbs(%struct.usbnet*, i32*) #1

declare dso_local i32 @tasklet_schedule(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
